Loading currencies and exchange rates and displaying.
- Include Room database for saving data on device
- Hook up flow to use Room primarily with API data backfilling
- Ugly UI implementation with clickable currency to set as base.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.mking.currencywatch">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".CurrencyWatchApplication"
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CurrencyWatch">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CurrencyWatch.NoActionBar">
