--- a/versions.properties
+++ b/versions.properties
@@ -63,3 +63,5 @@ version.com.jakewharton.retrofit..retrofit2-kotlinx-serialization-converter=0.8.
 
 ## unused
 version.androidx.room=2.3.0
+
+version.androidx.core-splashscreen=1.0.0-alpha02
